--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "liujinghan <jinghan.liu@yunjiaplus.com>",
   "license": "MIT",
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs"
   },
   "devDependencies": {
     "vuepress": "^1.3.1"
